--- a/src/components/Review/review.css
+++ b/src/components/Review/review.css
@@ -18,9 +18,9 @@
     opacity: 0.9;
 }
 .card-rating {
-    color: #0101ba;
+    color: rgb(25, 25, 25);
     opacity: 0.7;
-    font-size: calc(0.75rem + 0.25vw);
+    font-size: calc(0.55rem + 0.25vw);
     font-weight: 600;
 }
 .card-img-container {
