--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,11 +2,10 @@
     position: sticky;
     top: 0;
     padding: 1.5rem 4rem;
-    background-color: rgba(46, 46, 46, 0.948);
+    background-color: #000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px rgba(1, 1, 1, 0.1);
     z-index: 10;
 }
 .brand a {
@@ -22,7 +21,7 @@
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     letter-spacing: 1px;
     font-size: calc(1rem + 0.1vw);
     font-weight: 600;
